# ModelBasedNDPC

./: CMakeLists.txt  modelBasedNDPC.pro
include/: HoudiniModelBasedNDPC.h  dataHandler.h  spatialGrid.h
src/: HoudiniModelBasedNDPC.cpp  spatialGrid.cpp
